重写默认的BasicError